	data() are not normally needed as the data objects are visible
	in the 'datasets' package.

	Packages can be installed to make their data objects visible
	via R CMD INSTALL --lazy-data or via a field in the
	DESCRIPTION file.

    o	Package 'graphics' has been split into 'grDevices' (the
	graphics devices shared between base and grid graphics) and
	'graphics' (base graphics).

    o	The semantics of data() have changed (and were incorrectly
	documented in recent releases) and the function has been moved
	to package 'utils'.  Please read the help page carefully if
	you use the 'package' or 'lib.loc' arguments.

	data() now lists datasets, and not just names which data() accepts.

    o	Dataset 'phones' has been renamed to 'WorldPhones'.

    o	Datasets 'sunspot.month' and 'sunspot.year' are available
	separately but not via data(sunspot) (which is used by package
	lattice to retrieve a dataset 'sunspot').

    o	Packages must have been re-installed for this version, and
	library() will enforce this.

    o	Package names must now be given exactly in library() and
	require(), regardless of whether the underlying file system is
	case-sensitive or not.

    o   R no longer accepts associative use of relational
        operators. That is, 3 < 2 < 1 (which used to evalute
        as TRUE!) now causes a syntax error. If this breaks
        existing code, just add parentheses - or braces in the
        case of plotmath.


NEW FEATURES

    o	There is a new atomic vector type, class "raw".	 See ?raw for
	full details including the operators and utility functions provided.

    o	The default barplot() method by default uses a
	gamma-corrected grey palette (rather than the heat color
	palette) for coloring its output when given a matrix.

    o	The 'formula' method for boxplot() has a 'na.action' argument,
	defaulting to 'na.pass'.  This is mainly useful if the response
	is a matrix when the previous default of 'na.omit' would omit
	entire rows.  (Related to PR#6846.)
